--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -222,10 +222,35 @@ section {
         border-radius: var(--br-sm-2);
         height: 130px;
         width: 130px;
-        margin-left: 1rem;
+        margin-left: auto;
+        margin-right: auto;
         border-radius: 50%;
         background-color: var(--color-black);
         transition: all 0.4s ease-in-out;
+    }
+
+    .header-content {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+
+    .header-content .right-header {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding-right: 5rem;
+        padding-left: 2rem;
+    }
+
+    .header-content .left-header {
+        width: 100%;
+    }
+
+    .header-content .left-header .h-shape {
+        width: 100%;
+        height: 50%;
+        clip-path: polygon(0 0, 100% 0%, 100% 100%, 0% 100%);
     }
 }
 
@@ -249,4 +274,13 @@ section {
 
 .main-btn .btn-text {
     padding: 0 2rem;
-  }
+}
+
+.main-btn .btn-icon {
+    background-color: var(--color-secondary);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    padding: 1rem;
+}
