--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -284,3 +284,25 @@ section {
     border-radius: 50%;
     padding: 1rem;
 }
+
+.main-btn::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translateX(100%);
+    transition: all 0.4s ease-out;
+    z-index: -1;
+}
+
+.main-btn:hover {
+    transition: all 0.4s ease-out;
+}
+
+.main-btn:hover::before {
+    width: 100%;
+    height: 100%;
+    background-color: var(--color-secondary);
+    transform: translateX(0);
+    transition: all 0.4s ease-out;
+}
