--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -230,7 +230,7 @@ section {
     overflow: hidden;
 }
 
-.main-btn .btn-text {
+.main-btn {
     padding: 0 2rem;
 }
 
@@ -410,7 +410,7 @@ section {
 .port-text {
     padding: 2rem 0;
     text-align: center;
-  }
+}
 
 .portfolios {
     display: grid;
@@ -492,6 +492,92 @@ section {
     transform: scale(1);
 }
 
+
+.contact-content-con {
+    display: flex;
+    padding-top: 3.5rem;
+}
+
+.contact-container {
+    padding-right: 2rem;
+}
+
+.contact-content-con .left-contact {
+    flex: 2;
+}
+
+.contact-content-con .left-contact h4 {
+    margin-top: 1rem;
+    font-size: 2rem;
+    text-transform: uppercase;
+}
+
+.contact-content-con .left-contact p {
+    margin: 1rem 0;
+    line-height: 2rem;
+}
+
+.contact-content-con .left-contact .contact-info .contact-item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.contact-content-con .left-contact .contact-info .contact-item p {
+    margin: 0.3rem 0 !important;
+    padding: 0 !important;
+}
+
+.contact-content-con .left-contact .contact-info .contact-item .icon {
+    display: grid;
+    grid-template-columns: 40px 1fr;
+}
+
+.contact-content-con .left-contact .contact-info .contact-item .icon i {
+    display: flex;
+    align-items: center;
+    font-size: 1.3rem;
+}
+
+.contact-content-con .left-contact .contact-icon {
+    display: flex;
+    margin-top: 2rem;
+}
+
+.contact-content-con .left-contact .contact-icons {
+    display: flex;
+    justify-content: center;
+}
+
+.contact-content-con .left-contact .contact-icon a {
+    display: flex;
+    align-items: center;
+    color: var(--color-white);
+    background-color: var(--color-grey-5);
+    cursor: pointer;
+    justify-content: center;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin: 0 0.4rem;
+    transition: all 0.4s ease-in-out;
+}
+
+.contact-content-con .left-contact .contact-icon a:hover {
+    background-color: var(--color-secondary);
+}
+
+.contact-content-con .left-contact .contact-icon a:hover i {
+    color: var(--color-primary);
+}
+
+.contact-content-con .left-contact .contact-icon a i {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.3rem;
+}
+
 @media (max-width:800px) {
     .header-content .left-header .image {
         border-radius: var(--br-sm-2);
@@ -506,6 +592,12 @@ section {
     .portfolios {
         display: flex;
         flex-direction: column;
+    }
+
+    .contact-content-con .left-contact .contact-info .contact-item {
+        display: flex;
+        flex-direction: column;
+
     }
 }
 
