--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -7,7 +7,7 @@
 
 :root {
     --color-primary: #191d2b;
-    --color-secondary: #27AE60;
+    --color-secondary: #ae7f27;
     --color-white: #FFFFFF;
     --color-black: #000;
     --color-grey0: #f8f8f8;
@@ -19,6 +19,20 @@
     --color-grey-6: #12181b;
     --br-sm-2: 14px;
     --box-shadow-1: 0 3px 15px rgba(0, 0, 0, .3);
+}
+
+.light-mode {
+    --color-primary: #FFFFFF;
+    --color-secondary: #66a9f5;
+    --color-white: #454e56;
+    --color-black: #000;
+    --color-grey0: #f8f8f8;
+    --color-grey-1: #6c7983;
+    --color-grey-2: #6c7983;
+    --color-grey-3: #6c7983;
+    --color-grey-4: #454e56;
+    --color-grey-5: #f8f8f8;
+    --color-grey-6: #12181b;
 }
 
 body {
@@ -578,6 +592,32 @@ section {
     font-size: 1.3rem;
 }
 
+.theme-btn {
+    top: 5%;
+    right: 3%;
+    width: 65px;
+    height: 65px;
+    border-radius: 50%;
+    background-color: var(--color-grey-4);
+    cursor: pointer;
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 3px 15px rgba(0, 0, 0, 0.3);
+    transition: all 0.1s ease-in-out;
+}
+
+.theme-btn:active {
+    transform: translateY(-3px);
+}
+
+.theme-btn i {
+    font-size: 1.4rem;
+    color: var(--color-grey-2);
+    pointer-events: none;
+}
+
 @media (max-width:800px) {
     .header-content .left-header .image {
         border-radius: var(--br-sm-2);
@@ -640,5 +680,9 @@ section {
     .about-certifications {
         display: flex;
         flex-direction: column;
+    }
+
+    section {
+        padding-left: 1rem;
     }
 }
